--- a/style.css
+++ b/style.css
@@ -7,18 +7,27 @@
     box-sizing: border-box;
 }
 
-body {
-    font-family: 'Poppins', sans-serif;
-    background-color: #ede9e9;
-}
 
+body {
+    background-image: url("Password-Policy-Best-Practices-2021.jpg");
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    height: 100vh;
+    margin: 0;
+    color: rgb(29, 0, 0);
+    font-family: Arial, sans-serif;
+    font-size: 18px;
+    font-family: 'Poppins', sans-serif;
+}
 header {
     width: 100%;
     position: absolute;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     padding: 0 50px;
     text-align: center;
-    color: #6c63ff;
+    color: #f0f0f3;
     padding: 50px 0;
 }
 
@@ -33,7 +42,7 @@ header {
 
 .container .form-container {
     width: 400px;
-    background-color: #fff;
+    background-color: #aeecf0;
     padding: 25px 30px;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -44,18 +53,18 @@ header {
     height: 40px;
     margin: 10px 0;
     padding: 0 10px;
-    border: 1px solid #ccc;
+    border: 1px solid #e59393;
     outline: none;
     border-radius: 5px;
     font-size: 18px;
 }
 
 .container .form-container input:focus {
-    border: 1px solid #6c63ff;
+    border: 1px solid #fcc3c3;
     outline: 4px solid rgba(108, 99, 255, 0.5);
 }
 .container .form-container input:active {
-    border: 1px solid #0f05c4;
+    border: 1px solid #5f57e9;
 }
 
 .container .form-container button {
@@ -75,7 +84,7 @@ header {
 
 
 .container .form-container button:hover {
-    background-color: #4f47e5;
+    background-color: #7671cc;
 }
 
 .container .progress-line-container{
@@ -105,7 +114,7 @@ header {
     right: 10px;
     transform: translateY(-50%);
     font-size: 20px;
-    color: #ccc;
+    color: #e4b6b6;
 }
 
 .input-icon:hover {
